--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="mb-8 leading-relaxed">I am an aspiring supr coder living in Issaquah, WA. I love basketball and computers! I'm good at both! Scouts, recruit me. Welcome to my portfolio! I will be sharing about my life and learnings and you will find many helpful topics here...!🎉</p>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <img class="object-cover object-center rounded" alt="hero" src="/Shreyas_Portfolio/images/IMG_6386.HEIC">
+            <img class="object-cover object-center rounded" alt="hero" src="/images/IMG_6386.HEIC">
           </div>
         </div>
       </section>
