--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
                 <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
                 <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">Personal Memoir</h1>
                 <p class="leading-relaxed mb-3">This is the memoir I created for my project. Its my journey from India to the US</p>
-                <a href="docs/Lang-Arts-Memoir.pdf" class="text-indigo-400 inline-flex items-center">Download Link
+                <a href="Shreyas_Portfolio/docs/Lang-Arts-Memoir.pdf" class="text-indigo-400 inline-flex items-center">Download Link
                   <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
