--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
                 <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
                 <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">Book Report</h1>
                 <p class="leading-relaxed mb-3">I have read the book Warriors Don't Cry and made a book report for it. Be sure to check out the book, its amazing!</p>
-                <a href="docs/Book-Report.pdf" class="text-indigo-400 inline-flex items-center">Download Link
+                <a href="Shreyas_Poortfolio/docs/Book-Report.pdf" class="text-indigo-400 inline-flex items-center">Download Link
                   <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
