--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css">
     <link rel="stylesheet" href="style.css">
+    
     <title>Document</title>
 </head>
 <body>
@@ -16,17 +17,12 @@
             <span class="ml-3 text-xl">Shreyas Deshpande</span>
           </a>
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-700	flex flex-wrap items-center text-base justify-center">
-              <a href="#" class="mr-5 hover:text-white">Home</a>
-              <a href="#" class="mr-5 hover:text-white">About Me</a>
-              <a href="#" class="mr-5 hover:text-white">My work</a>
-              <a href="#" class="mr-5 hover:text-white">Contact</a>
+              <a href="index.html" class="mr-5 hover:text-white">Home</a>
+              <a href="#about" class="mr-5 hover:text-white">About Me</a>
+              <a href="#work" class="mr-5 hover:text-white">My work</a>
+              <a href="#contact" class="mr-5 hover:text-white">Contact</a>
             <a href="blog.html" class="mr-5 hover:text-white">Blog</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Button
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewbox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </button>
         </div>
       </header>
       <section class="text-gray-400 bg-gray-900 body-font">
@@ -40,7 +36,7 @@
           </div>
         </div>
       </section>
-      <section class="text-gray-400 bg-gray-900 body-font">
+      <section id="about" class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-24 mx-auto flex flex-col">
           <div class="lg:w-4/6 mx-auto">
             <div class="rounded-lg h-64 overflow-hidden">
@@ -62,17 +58,12 @@
               </div>
               <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-800 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
                 <p class="leading-relaxed text-lg mb-4">Coding has always been my passsion. I created this portfolio so that I can reach out... aand add an website for my bio! I moved to the US from India in Fall of 2022. It had been an amazing experience. I don't just stik with HTML and CSS, I want to use advanced languages like Python💪💪 and contribute! I hope you find my portfolio interesting!</p>
-                <a class="text-indigo-400 inline-flex items-center">Learn More
-                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewbox="0 0 24 24">
-                    <path d="M5 12h14M12 5l7 7-7 7"></path>
-                  </svg>
-                </a>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="text-gray-400 bg-gray-900 body-font overflow-hidden">
+      <section id="work" class="text-gray-400 bg-gray-900 body-font overflow-hidden">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-wrap -m-12">
             <div class="p-12 md:w-1/2 flex flex-col items-start">
@@ -80,12 +71,6 @@
               <h2 class="sm:text-3xl text-2xl title-font font-medium text-white mt-4 mb-4">Made portfolios for many people</h2>
               <p class="leading-relaxed mb-8">Making a portfolio is not an easy task. It obviously takes skill, but also creativity. I have received nice feedback for the portfolios I made for my clients, including my dad!</p>
               <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-800 border-opacity-75 mt-auto w-full">
-                <a class="text-indigo-400 inline-flex items-center">Learn More
-                  <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M5 12h14"></path>
-                    <path d="M12 5l7 7-7 7"></path>
-                  </svg>
-                </a>
                 <span class="text-gray-500 mr-3 inline-flex items-center ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
                   <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewbox="0 0 24 24">
                     <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
@@ -129,7 +114,7 @@
         </div>
       </section>
       <form action="https://formspree.io/f/xayakgka" method="POST">
-      <section class="text-gray-400 bg-gray-900 body-font relative">
+      <section id="contact" class="text-gray-400 bg-gray-900 body-font relative">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-col text-center w-full mb-12">
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Contact Us</h1>
@@ -159,30 +144,23 @@
                 <button type="submit" class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
               </div>
               <div class="p-2 w-full pt-8 mt-8 border-t border-gray-800 text-center">
-                <a class="text-indigo-400">example@email.com</a>
-                <p class="leading-normal my-5">49 Smith St.
-                  <br>Saint Cloud, MN 56301
+                <p class="leading-normal my-5">These are my social media!
                 </p>
                 <span class="inline-flex">
-                  <a class="text-gray-500">
+                  <a href="https://www.facebook.com/profile.php?id=100088557660018" class="text-gray-500">
                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewbox="0 0 24 24">
                       <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
                     </svg>
                   </a>
-                  <a class="ml-4 text-gray-500">
+                  <a href="https://twitter.com/Not_Shreyas1" class="ml-4 text-gray-500">
                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewbox="0 0 24 24">
                       <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
                     </svg>
                   </a>
-                  <a class="ml-4 text-gray-500">
+                  <a href="https://www.instagram.com/itz_shreyas_lol/" class="ml-4 text-gray-500">
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewbox="0 0 24 24">
                       <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
                       <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                    </svg>
-                  </a>
-                  <a class="ml-4 text-gray-500">
-                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewbox="0 0 24 24">
-                      <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
                     </svg>
                   </a>
                 </span>
@@ -193,4 +171,5 @@
       </section>
     </form>
 </body>
+<script src="script.js"></script>
 </html>
