--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="style.css">
+
     <title>Document</title>
 </head>
 <body>
+  <button id="btnScrollToTop">
+    <i class="material-icons">arrow_upward</i>
+  </button>
     <header class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
@@ -115,4 +121,5 @@
         </div>
       </section> 
 </body>
+<script src="script.js"></script>
 </html>
