--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     
-    <title>Document</title>
+    <title>Shreyas Portfolio</title>
 </head>
 <body>
   <button id="btnScrollToTop">
