--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
   <button id="btnScrollToTop">
     <i class="material-icons">arrow_upward</i>
   </button>
+  <div id="snow"></div>
     <header class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-          <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+          <a class="nav flex title-font font-medium items-center text-white mb-4 md:mb-0">
             
             <span class="ml-3 text-xl">Shreyas Deshpande</span>
           </a>
-          <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-700	flex flex-wrap items-center text-base justify-center">
+          <nav class="nav md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-700	flex flex-wrap items-center text-base justify-center">
               <a href="index.html" class="mr-5 hover:text-white">Home</a>
               <a href="#about" class="mr-5 hover:text-white">About Me</a>
               <a href="#work" class="mr-5 hover:text-white">My work</a>
