--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="Christmas.css">
+    <link rel="stylesheet" type="text/css" href="styles.css" />.
     <title>Shreyas Portfolio</title>
 </head>
 <body>
@@ -15,7 +16,18 @@
     <i class="material-icons">arrow_upward</i>
   </button>
   <div id="snow"></div>
-    <header class="text-gray-400 bg-gray-900 body-font">
+  <div class="container1">
+    <div class="title">Happy Diwali</div>
+    <ul class="diwali">
+      <li><span></span></li>
+      <li><span></span></li>
+      <li><span></span></li>
+      <li><span></span></li>
+      <li><span></span></li>
+      <li><span></span></li>
+    </ul>
+  </div>
+    <header class=" text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="nav flex title-font font-medium items-center text-white mb-4 md:mb-0">
             
