--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="Christmas.css">
-    <link rel="stylesheet" type="text/css" href="styles.css" />.
+    <!-- <link rel="stylesheet" href="Christmas.css"> -->
     <title>Shreyas Portfolio</title>
 </head>
 <body>
@@ -16,9 +15,8 @@
     <i class="material-icons">arrow_upward</i>
   </button>
   <div id="snow"></div>
-  <div class="container1">
-    <div class="title">Happy Diwali</div>
-    <ul class="diwali">
+  <div class="container2">
+    <ul class="diwali2">
       <li><span></span></li>
       <li><span></span></li>
       <li><span></span></li>
